All tests succeeds.